--- a/facerace.html
+++ b/facerace.html
@@ -481,7 +481,7 @@ const translations = {
         instructionsText6: "Inspired by Steamlabs make: AI Robots. Questions? Comments? Feel free to contact me at ah@vilvite.no"
     },
     no: {
-        title: "Face Race med TensorFlow.js og micro:bit v1.0",
+        title: "Face Race med TensorFlow.js og micro:bit",
         cameraSelector: "Kameravelger",
         selectCamera: "Velg Kamera:",
         refreshList: "🔄 Oppdater Liste",
