--- a/facerace.html
+++ b/facerace.html
@@ -245,7 +245,7 @@ textarea {
     </div>
 </div>
 
-<h3>v1.0 - 17.03.25</h3>
+<h3>v1.3 - 19.03.25</h3>
 
 <!-- TensorFlow.js & JSZip -->
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@3.0.0/dist/tf.min.js"></script>
@@ -638,7 +638,7 @@ const translations = {
         instructionsText6: "Inspired by Steamlabs make: AI Robots. Questions? Comments? Feel free to contact me at ah@vilvite.no"
     },
     no: {
-        title: "Face Race med TensorFlow.js og micro:bit v1.0",
+        title: "Face Race med TensorFlow.js og micro:bit",
         cameraSelector: "Kameravelger",
         selectCamera: "Velg Kamera:",
         refreshList: "🔄 Oppdater Liste",
