--- a/bitbotremote.html
+++ b/bitbotremote.html
@@ -217,9 +217,9 @@ body::after {
         <br>
         <!--<button id="connectButton">Connect to Micro:bit USB serial</button>-->
         <br>        
-        <button id="demoLinkBT" onclick=" window.open('https://makecode.microbit.org/#pub:_VV2C65bfT621','_blank')">Demo code Bluetooth</button>
+        <button id="demoLinkBT" onclick=" window.open('https://makecode.microbit.org/#pub:_UvK7FURLC48i','_blank')">Demo code Bluetooth</button>
         <br>        
-        <!--<button id="demoLinkUSB" onclick=" window.open('https://makecode.microbit.org/#pub:_08sctr4dk0pf','_blank')">Demo code USB</button>-->
+        <!--<button id="demoLinkUSB" onclick=" window.open('https://makecode.microbit.org/#pub:_Yvsi0M1vV29c','_blank')">Demo code USB</button>-->
     </div>
 </div>
 
