--- a/facerace.html
+++ b/facerace.html
@@ -161,7 +161,7 @@ textarea {
 </head>
 <body>
 
-<h1>Face Race tjollahoppsannsa! Hvis du leser dette har noe gått i stykker</h1>
+<h1>Face Race testside tjollahoppsannsa! Hvis du leser dette har noe gått i stykker</h1>
 <!--<div class="fixed-image"></div>-->
 
 
@@ -629,7 +629,7 @@ async function predict() {
 
 const translations = {
     en: {
-        title: "Face Race with TensorFlow.js and micro:bit",
+        title: "Face Race with Teachable Machine and micro:bit",
         cameraSelector: "Camera Selector",
         selectCamera: "Select Camera:",
         refreshList: "🔄 Refresh List",
@@ -649,7 +649,7 @@ const translations = {
         instructionsText6: "Inspired by Steamlabs make: AI Robots. Questions? Comments? Feel free to contact me at ah@vilvite.no"
     },
     no: {
-        title: "KI Kart med TensorFlow.js og micro:bit",
+        title: "KI Kart med Teachable Machine og micro:bit",
         cameraSelector: "Kameravelger",
         selectCamera: "Velg Kamera:",
         refreshList: "🔄 Oppdater Liste",
@@ -665,7 +665,7 @@ const translations = {
         instructionsText2: "2) Dra og slipp filen inn på feltet under, eller klikk på feltet og velg filen, for å laste inn modellen.",
         instructionsText3: "3) Trykk Koble til micro:bit-knappen, og velg enheten din i vinduet som dukker opp (NB! Bruk Chrome eller Edge).",
         instructionsText4: "micro:biten din skal nå motta Klasse-navnene som signaler over USB eller Blåtann! Still inn Terskel-bryteren til ønsket skråsikkerhet. ",
-        instructionsText5: "Hvis noe går i stykker, kan du trykke F12 og sjekke konsollet for feilmeldinger og logg. NB! Noe ser ut til å være feil med hvordan modellen leser bilder for øyeblikket, stemmer ikke med slik det ser ut i treningsverktøyet.",
+        instructionsText5: "Hvis noe går i stykker, kan du trykke F12 og sjekke konsollet for feilmeldinger og logg.",
         instructionsText6: "Inspirert av Steamlabs make: AI Robots. Spørsmål, forslag eller kommentarer? Ikke nøl med å sende meg en epost på ah@vilvite.no"
     }
 };        
