Update bitbotremote.html link
New code link

--- a/bitbotremote.html
+++ b/bitbotremote.html
@@ -281,7 +281,7 @@ body::after {
         <br>
         <!--<button id="connectButton">Connect to Micro:bit USB serial</button>-->
         <br>        
-        <button id="demoLinkBT" onclick=" window.open('https://makecode.microbit.org/#pub:_4hgd3eHuzW7U','_blank')">Demo code Bluetooth</button>
+        <button id="demoLinkBT" onclick=" window.open('https://makecode.microbit.org/#pub:_g6vUbyb1XDkD','_blank')">Demo code Bluetooth</button>
         <br>        
         <!--<button id="demoLinkUSB" onclick=" window.open('https://makecode.microbit.org/#pub:_08sctr4dk0pf','_blank')">Demo code USB</button>-->
 <!-- SUPER DUPER HANDY INFORMASJONSLOGG!  -->
