--- a/facerace.html
+++ b/facerace.html
@@ -512,7 +512,7 @@ textarea {
     <br>
     <br>
 
-    <h3>v3.5 - 21.01.26</h3>
+    <h3>v3.5 <a href="https://vilvite.github.io/FaceRace4microbit/bitbotremote.html" target="_blank"> -</a> 21.01.26</h3>
     </div>
 </div>
 
@@ -1435,3 +1435,4 @@ init();
 <!-- https://www.asciiart.eu/text-to-ascii-art for å lage gøye skriblerier-->
 
 </html>
+
