--- a/facerace.html
+++ b/facerace.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#12d633" />
-    <title>KI Kart Interface v3.5</title>
+    <title>KI Kart Interface v3.6</title>
 
 
 <!-- █████████████████████████████████████████████████████████████████████████ -->
@@ -504,7 +504,7 @@ textarea {
         <br>
         <div id="instructionsText6"><i></i></div>
         <div id="selectButtons">
-        <button id="demoLink" onclick=" window.open('https://makecode.microbit.org/#pub:_i2ied6JsmUD3','_blank')">Kode-eksempel USB</button>
+        <button id="demoLink" onclick=" window.open('https://makecode.microbit.org/#pub:_Yj9UbEEyf8qW','_blank')">Kode-eksempel USB</button>
         <button id="demoLinkBT" onclick=" window.open('https://makecode.microbit.org/#pub:_dg9WXzWMTXga','_blank')">Kode-eksempel Bluetooth</button> <!-- Nå leder denne til et program som FUNKER.-->
         <button id="connectButtonBTYOLO">Reservetilkobling: Ufiltrert Bluetooth</button>
        
@@ -950,20 +950,28 @@ async function predict() {
 // Connect to Micro:bit over serial. Vanlig USB-tilkobling, ezpz.
 document.getElementById("connectButton").addEventListener("click", async () => {
     try {
-        document.getElementById("connectButton").innerText = "Requesting port...";
         const microbit = await navigator.serial.requestPort();
-        document.getElementById("connectButton").innerText = "Awaiting connection...";
         await microbit.open({ baudRate: 115200 });
         writer = microbit.writable.getWriter();
         connectedUSB = true;
         console.log("✅ Connected to Micro:bit!");
-        document.getElementById('connectButtonBT').disabled = true;
-        document.getElementById("connectButton").innerText = "Connected";
     } catch (error) {
         console.error("❌ Error connecting to Micro:bit:", error);
-        document.getElementById("connectButton").innerText = "Error!";
     }
 });
+
+/*Trekker oppmerksomheten mot tilkoblingsknappen om micro:biten blir koblet fra, som f.eks. ved nedlasting av nytt program*/
+
+function handleUSBDisconnect() {
+    connectedUSB = false;
+    writer = null;
+    console.log("⚠️ micro:bit USB disconnected");
+    document.getElementById('connectButtonBT').disabled = false;
+    if (!connectButton) return;
+    connectButton.classList.add("flash-red");
+}
+
+
 
 
 document.getElementById("connectButtonBT").addEventListener("click", async () => {
