--- a/bitbotremote.html
+++ b/bitbotremote.html
@@ -1077,6 +1077,11 @@ async function init() {
 }
 init();
 
+if ('serviceWorker' in navigator) {
+  window.addEventListener('load', () => {
+    navigator.serviceWorker.register('./service-worker.js');
+  });
+}
 
 
 </script>
