--- a/bitbotremote.html
+++ b/bitbotremote.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#12d633" />
     <title>BitBotRemote V1.4</title>
-    <link rel="manifest" href="/remote.app.webmanifest.json">
+    <link rel="manifest" href="remote-manifest.json">
 
 
 <!--  _____                                              _____  -->
