--- a/bitbotremote.html
+++ b/bitbotremote.html
@@ -374,7 +374,8 @@ body::after {
             <br>        
             <button id="connectButton">Connect to micro:bit USB</button>
             <button id="demoLinkUSB" onclick=" window.open('https://makecode.microbit.org/#pub:_8qUaxXVjWMMY','_blank')">Demo code USB</button>
-            
+            <br>
+            <button id="demoLinkUSB2" onclick=" window.open('https://makecode.microbit.org/#pub:_Prc2oqbmxHWc','_blank')">Kitronik MOVE (Kun USB)</button>
         </div>
 
     </div> 
