Update facerace.html favicon

--- a/facerace.html
+++ b/facerace.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#12d633" />
     <title>KI Kart Interface v3.6</title>
     <link rel="manifest" href="facerace-manifest.json">
-
+    <link rel="shortcut icon" type="image/png" href="icon/fr128.png">
 
 <!-- █████████████████████████████████████████████████████████████████████████ -->
 <!-- █▌                                                                     ▐█ -->
