--- a/bitbotremote.html
+++ b/bitbotremote.html
@@ -429,9 +429,9 @@ body::after {
         </div>
 
     </div> 
+<br
+   <h3>v1.5.4 <a href="./facerace.html" target="_blank"> -</a> 29.01.26</h3> 
 
-
-    
 </div>
 
 
