--- a/bitbotremote.html
+++ b/bitbotremote.html
@@ -430,7 +430,7 @@ body::after {
 
     </div> 
 <br
-   <h3>v1.5.4 <a href="./facerace.html" target="_blank"> -</a> 29.01.26</h3> 
+   <h3>v1.5.4 <a href="./facerace.html"> -</a> 29.01.26</h3> 
 
 </div>
 
