--- a/bitbotremote.html
+++ b/bitbotremote.html
@@ -892,7 +892,7 @@ joystick.addEventListener("touchstart", (e) => {
 // Logs joystick values every 50ms
 function logJoystickValues() {
     
-    if ((joystickX + joystickX) == 0) {
+    if ((joystickX + joystickY) == 0) {
         //console.log("🥽 Chilling");
         return;
     }
