Update bitbotremote.html date fix

--- a/bitbotremote.html
+++ b/bitbotremote.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#12d633" />
-    <title>BitBotRemote V1.5.5</title>
+    <title>BitBotRemote V1.5.5b</title>
     <link rel="manifest" href="remote-manifest.json">
     <link rel="shortcut icon" type="image/png" href="icon/128.png">
 
@@ -436,7 +436,7 @@ body[data-input="gamepad"] #joystick {
 
     </div> 
 <br>
-    <h3>v1.5.5 <a href="./facerace.html"> -</a> 02.02.26</h3> 
+    <h3>v1.5.5 <a href="./facerace.html"> -</a> 03.02.26</h3> 
 
 </div>
 
